INTYGFV-16406: Fix some sonarqube violation